kubernetes/apps/karakeep/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: karakeep
  namespace: karakeep
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`karakeep.nihalxkumar.dev`)
      kind: Rule
      middlewares:
        - name: traefik-tailscale-only@kubernetescrd
      services:
        - name: karakeep
          port: 80
  tls:
    secretName: nihalxkumar-dev-tls
